--- a/title_basics_v1.ipynb
+++ b/title_basics_v1.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -58,7 +58,19 @@
       "metadata": {
         "id": "qF65l6JYIWyc"
       },
-      "execution_count": 169,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")"
+      ],
+      "metadata": {
+        "id": "ngru0IVCvQGg"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +86,7 @@
         },
         "outputId": "694007b3-51bf-4699-fade-7b4f17a3bdc1"
       },
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +119,7 @@
       "metadata": {
         "id": "warkcGZ1yIMk"
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +130,7 @@
       "metadata": {
         "id": "MnwiE_0ZzKla"
       },
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -200,7 +212,7 @@
         "id": "QlQAAoo1V8QG",
         "outputId": "61ff549f-3e5c-417b-eb4c-18df794e2537"
       },
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +256,7 @@
         "id": "t_y4xT3QckaS",
         "outputId": "0fc0426e-8028-4091-8041-2bd6bbbdea24"
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +279,7 @@
       "metadata": {
         "id": "tgKC5aUUgP6_"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -282,7 +294,7 @@
         "id": "ZYOthGz1u7y3",
         "outputId": "be864885-aeb6-4cc5-850f-21168221ecbe"
       },
-      "execution_count": 176,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +322,7 @@
         "id": "eGxUEvR5aqRB",
         "outputId": "12ba441e-58f0-4581-9878-39157c9d84ba"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,7 +356,7 @@
       "metadata": {
         "id": "oqMXW4jF-5Wh"
       },
-      "execution_count": 177,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -355,7 +367,7 @@
       "metadata": {
         "id": "UZdvCV8Z-_Pr"
       },
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -366,7 +378,7 @@
       "metadata": {
         "id": "nc1sfgf0MNMb"
       },
-      "execution_count": 179,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -381,7 +393,7 @@
         "id": "vBuOy-JnYDYp",
         "outputId": "3db8e02f-faf0-4f2a-aeb8-a663fc43a9d3"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,7 +428,7 @@
         "id": "QMpDpNnbRhrh",
         "outputId": "a005fe18-d91b-4038-8826-a1436c9ee1f0"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +466,7 @@
         "id": "mPoJGO8tMr0i",
         "outputId": "bedd56ad-38fd-4de0-c571-4c8506553ee0"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -499,7 +511,7 @@
         "id": "JXJmgQd8nG5T",
         "outputId": "a1d49a64-03e7-40a2-b568-6d0f88f747c9"
       },
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,7 +540,7 @@
         "id": "lYfMkijeOUc1",
         "outputId": "e0670c18-8d5d-4b30-9ee5-9cf7fb007fa0"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,7 +574,7 @@
         "id": "n6H5nf58PPjX",
         "outputId": "72539144-9eab-4fac-9eee-3baff85a915e"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -597,7 +609,7 @@
         "id": "dzBcduzeRsa9",
         "outputId": "b2b08c58-9989-4f82-dca9-74212357851c"
       },
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,7 +650,7 @@
         "id": "balW4VEOYC58",
         "outputId": "ff6e3e60-3cf4-4104-86bf-850f51c2110e"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,7 +684,7 @@
         "id": "89LYy-JTSOV5",
         "outputId": "67e2e265-52d5-42fe-9ef1-f9bdab3a5243"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -701,7 +713,7 @@
         },
         "outputId": "2ae9126b-7f22-4c52-e698-4b65f2f29b3e"
       },
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -733,7 +745,7 @@
         "id": "-VXDA_gxMm3c",
         "outputId": "24d6caf9-d050-4585-9cc5-e63b88182a2d"
       },
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -760,7 +772,7 @@
         "id": "IVVstansNA0h",
         "outputId": "805e5354-99b8-4679-855e-ca5e16dd8829"
       },
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -789,7 +801,7 @@
         "id": "ZZUT-jcBZGrV",
         "outputId": "933a4816-068b-4fcf-cac9-e7e4d0c24e72"
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -823,7 +835,7 @@
         "id": "T1KJqKcOm8Pr",
         "outputId": "4f1569c2-03d6-4ec4-db49-2127cd99a729"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -848,7 +860,7 @@
       "metadata": {
         "id": "Ia-ndHqmZTf1"
       },
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -863,7 +875,7 @@
         "id": "PBuWpYWBpNj0",
         "outputId": "04d28761-02ae-4fe2-8ea0-29fc360689ed"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -919,7 +931,7 @@
         "id": "Th1mrQjRU0Gq",
         "outputId": "4e6ab821-0433-46f0-9f58-323a3e373d5c"
       },
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -947,7 +959,7 @@
         "id": "bRBKhphppsYO",
         "outputId": "0a69dba0-952d-4f69-e3fa-6507a82e5da3"
       },
-      "execution_count": 200,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -985,7 +997,7 @@
       "metadata": {
         "id": "fsLOoPmOptrM"
       },
-      "execution_count": 202,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1000,7 +1012,7 @@
         "id": "MOU_zTrJqQsr",
         "outputId": "949aeddc-f9cc-41e2-a2ff-a6e84791f2ea"
       },
-      "execution_count": 203,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1045,7 +1057,7 @@
       "metadata": {
         "id": "TZeU9wsbqY60"
       },
-      "execution_count": 204,
+      "execution_count": null,
       "outputs": []
     }
   ]
